--- a/20250820/index.html
+++ b/20250820/index.html
@@ -58,7 +58,7 @@
 <!-- ===== 3분기 인기 코스 ===== -->
 <table class="container bg-light" style="margin-top:20px;">
   <tr>
-    <td class="section" style="padding:20px 0;">
+    <td class="section" style="padding:0 0;">
       <table class="container bar-main" style="text-align:left;">
         <tr>
           <td class="card">
@@ -92,7 +92,7 @@
 <!-- ===== 러크TV ===== -->
 <table class="container bg-light" style="margin-top:20px;">
   <tr>
-    <td class="section" style="padding:20px 0;">
+    <td class="section" style="padding:0 0;">
       <table class="container bar-main" style="text-align:left;">
         <tr>
           <td class="card">
@@ -113,7 +113,7 @@
 <!-- ===== LG SDC 발표자 모집 ===== -->
 <table class="container bg-light" style="margin-top:20px;">
   <tr>
-    <td class="section" style="padding:20px 0;">
+    <td class="section" style="padding:0 0;">
       <table class="container bar-main" style="text-align:left;">
         <tr>
           <td class="card">
@@ -132,7 +132,7 @@
 <!-- ===== 이벤트 ===== -->
 <table class="container bg-light" style="margin-top:20px;">
   <tr>
-    <td class="section" style="padding:20px 0;">
+    <td class="section" style="padding:0 0;">
       <table class="container bar-main" style="text-align:left;">
         <tr>
           <td class="card">
