--- a/20250820/index.html
+++ b/20250820/index.html
@@ -110,6 +110,46 @@
   </tr>
 </table>
 
+<!-- ===== 쏘칼 세미나 (실전 사례) ===== -->
+<table class="container bg-light" style="margin-top:20px;">
+  <tr>
+    <td class="section" style="padding:20px 0;">
+      <table class="container bar-main" style="text-align:left;">
+        <tr>
+          <td class="card">
+            <!-- 키커(소제목) -->
+            <p style="margin:0 0 6px; font-size:12px; letter-spacing:0.2px; color:#1e5aa8;">
+              💡 쏘칼 웹엑스 세미나 · 현업에 녹아든 현업 활용 사례
+            </p>
+
+            <!-- 제목 -->
+            <h3 class="main-color" style="font-weight:700; line-height:1.5;">
+              [SW College][쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소 by 팀 AI돌
+            </h3>
+
+            <!-- 본문 -->
+            <p style="margin-top:10px;">
+              이슈가 발생할 때마다 “이건 누가 맡아야 하지?” 고민했던 적 있으신가요?<br />
+              TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.
+            </p>
+            <p>
+              과연 어떻게 가능했을까? <strong>단 30분 세미나</strong>에서 그 비밀을 확인하세요!
+            </p>
+
+            <!-- 신청 안내 -->
+            <div style="margin-top:12px; padding:12px; background:#ffffff; border:1px solid #dbe7ff; border-radius:6px;">
+              <p style="margin:0; font-size:13px;">
+                <strong style="color:#2c4d90;">신청</strong> : EP &gt; HR &gt; Learning &gt; 
+                <em>TensorFlow로 만든 '이슈 해결 담당자 자동 지정 프로그램’</em> 검색으로 신청
+              </p>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+  
 <!-- ===== LG SDC 발표자 모집 ===== -->
 <table class="container bg-light" style="margin-top:20px;">
   <tr>
