--- a/20250820/index.html
+++ b/20250820/index.html
@@ -124,7 +124,7 @@
 
             <!-- 제목 -->
             <h3 class="main-color" style="font-weight:700; line-height:1.5;">
-              [SW College][쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소 by 팀 AI돌
+              [SW College][쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소
             </h3>
 
             <!-- 본문 -->
@@ -140,7 +140,7 @@
             <div style="margin-top:12px; padding:12px; background:#ffffff; border:1px solid #dbe7ff; border-radius:6px;">
               <p style="margin:0; font-size:13px;">
                 <strong style="color:#2c4d90;">신청</strong> : EP &gt; HR &gt; Learning &gt; 
-                <em>TensorFlow로 만든 '이슈 해결 담당자 자동 지정 프로그램’</em> 검색으로 신청
+                <em>이슈 해결 담당자 자동 지정 프로그램</em> 검색으로 신청
               </p>
             </div>
           </td>
