--- a/20250820/index.html
+++ b/20250820/index.html
@@ -124,7 +124,7 @@
 
             <!-- 제목 -->
             <h3 class="main-color" style="font-weight:700; line-height:1.5;">
-              [SW College][쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소
+              [쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소
             </h3>
 
             <!-- 본문 -->
