--- a/20250820/index.html
+++ b/20250820/index.html
@@ -119,7 +119,7 @@
           <td class="card">
             <!-- 키커(소제목) -->
             <p style="margin:0 0 6px; font-size:12px; letter-spacing:0.2px; color:#1e5aa8;">
-              💡 쏘칼 웹엑스 세미나 · 현업에 녹아든 현업 활용 사례
+              🎓 쏘칼 세미나 · 배운 걸 바로 써먹은 실전 사례
             </p>
 
             <!-- 제목 -->
