--- a/20250820/index.html
+++ b/20250820/index.html
@@ -133,7 +133,7 @@
               TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.
             </p>
             <p>
-              과연 어떻게 가능했을까? <strong>단 30분 세미나</strong>에서 그 비밀을 확인하세요!
+              과연 어떻게 가능했을까? <strong>단 30분 세미나</strong>에서 그 비밀을 확인하세요! (08.27, 11:00~11:30)
             </p>
 
             <!-- 신청 안내 -->
