--- a/20250820/index.html
+++ b/20250820/index.html
@@ -98,9 +98,9 @@
           <td class="card">
             <h3 class="main-color">🎬 러크TV 신규 콘텐츠 "꿀툴과 꿀팁🍯"</h3>
             <ul style="font-size:13px; line-height:1.8;">
-              <li>🧠 <a href="http://collab.lge.com/main/x/pM_ywg" target="_blank" class="point-color">(꿀툴) Lovable - 클릭 한 번으로 웹앱 완성? 노코드 개발 플랫폼</a></li>
-              <li>📝 <a href="http://collab.lge.com/main/x/kBH1uw" target="_blank" class="point-color">(꿀툴) 1_Lovable 완전 가이드북</a></li>
-              <li>📚 <a href="http://collab.lge.com/main/x/mtCywg" target="_blank" class="point-color">(꿀팁) 2_Lovable 꿀팁 : 활용법</a></li>
+              <li>🧠 <a href="http://collab.lge.com/main/x/pM_ywg" target="_blank" class="point-color">(꿀툴) Lovable - 클릭 한 번으로 웹앱 완성? 노코드 개발 플랫폼</a>👈 CSO 정의석</li>
+              <li>📝 <a href="http://collab.lge.com/main/x/kBH1uw" target="_blank" class="point-color">(꿀툴) 1_Lovable 완전 가이드북</a>👈 CSO 정의석</li>
+              <li>📚 <a href="http://collab.lge.com/main/x/mtCywg" target="_blank" class="point-color">(꿀팁) 2_Lovable 꿀팁 : 활용법</a>👈 CSO 정의석</li>
             </ul>
             <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2193929410" target="_blank" class="btn btn-main">📺 전체 콘텐츠 보기</a>
           </td>
@@ -130,7 +130,7 @@
             <!-- 본문 -->
             <p style="margin-top:10px;">
               이슈가 발생할 때마다 “이건 누가 맡아야 하지?” 고민했던 적 있으신가요?<br />
-              TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.
+              TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.👈 VS 최진석
             </p>
             <p>
               과연 어떻게 가능했을까? <strong>단 30분 세미나</strong>에서 그 비밀을 확인하세요! (08.27, 11:00~11:30)
