--- a/20250820/index.html
+++ b/20250820/index.html
@@ -130,7 +130,7 @@
             <!-- 본문 -->
             <p style="margin-top:10px;">
               이슈가 발생할 때마다 “이건 누가 맡아야 하지?” 고민했던 적 있으신가요?<br />
-              TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.👈 VS 최진석
+              TensorFlow를 활용해 <strong>이슈를 해결할 담당자를 자동 예측 및 할당하는 AI 기반 프로그램</strong>을 직접 만든 사례를 공유합니다.<br>👈 VS 최진석
             </p>
             <p>
               과연 어떻게 가능했을까? <strong>단 30분 세미나</strong>에서 그 비밀을 확인하세요! (8.27.Wed.11:00~11:30)
