--- a/20250827/index.html
+++ b/20250827/index.html
@@ -94,7 +94,7 @@
 <li>Q. 설명자료에서 Unit은 Further Study가 필요하다고 하셨는데, Assignee와 Unit은 어떻게 다른 개념인가요?</li>
 <li>Q. 데이터 수집을 자동화할 수는 없나요?</li>
 </ul>
-<p>답변이 궁금하신 분은 온라인 과정을 신청(EP-Learning-과정검색)하여 다시 녹화본을 확인할 수 있습니다.</p>
+<p>그 외에도 현장에서 쏟아진 질문에 대한 답변이 궁금하신 분은 온라인 과정을 신청(EP-Learning-과정검색)하여 다시 녹화본⏺️을 확인할 수 있습니다.</p>
 </div>
 
   <!-- 개발자 필수 자료 -->
