--- a/20250827/index.html
+++ b/20250827/index.html
@@ -84,7 +84,7 @@
 <div class="card">
 <h3>📢 쏘칼 세미나 후기</h3>
 <h4>[SW College][쏘칼 세미나] TensorFlow로 만든 ‘이슈 해결 담당자 자동 지정 프로그램’ – PL의 업무 스트레스 50% 감소</h4>
-<p>오늘 진행된 쏘칼 세미나는 약 100여명이 참석한 가운데 마무리되었습니다. 세미나에서는 GPT/LLM을 활용하지 않고 <strong>TensorFlow로 직접 딥러닝 모델</strong>을 구현해 버그 데이터를 학습하고 담당자를 예측하는 과정을 소개했습니다. 이번 사례는 프로젝트 관리 업무 자동화의 적용 가능성을 보여주는 사례로 평가되었습니다.</p>
+<p>오늘 진행된 쏘칼 세미나는 약 100여명이 참석한 가운데 마무리되었습니다. 세미나에서는 GPT/LLM을 활용하지 않고 <strong>TensorFlow로 직접<br> 딥러닝 모델</strong>을 구현해 버그 데이터를 학습하고 담당자를 예측하는 과정을 소개했습니다. 이번 사례는 프로젝트 관리 업무 자동화의 적용 가능성을 보여주는 사례로 평가되었습니다.</p>
 <ul class=\"list-tight\">
 <li>발표: VS사업본부 <strong>팀 AI돌</strong> (이정미C, 정승희C, 최진석C)</li>
 </ul>
