--- a/20250903/index.html
+++ b/20250903/index.html
@@ -90,6 +90,21 @@
     <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3225294547" class="btn" target="_blank">🌐『쏘칼 프리미엄 인사이트』</a>
   </div>
 
+  <!-- 배지/학습왕 -->
+<div class="card">
+  <img src="https://pingjueuna.github.io/socalletter/badge.png" 
+       alt="3분기 알파카 배지" 
+       style="width:100px; float:right; margin-left:10px; border-radius:50%;">
+  <h3>📢 3분기 배지는 바로 알파카!</h3>
+  <p>세상 귀여운 알파카 배지를 품고 싶다면, 이번 기회에 학습 열정을 보여주세요🔥</p>
+  <p><strong>이번 주 1위는 2주 연속! HS본부 김혜령 책임님 🎉</strong><br>
+     특히 HS본부는 TOP10에 무려 6명이 오르며, 학습 저력을 다시 한번 입증했습니다.</p>
+  <p>CTO·VS·MS 본부에서도 고르게 선전하며, 본부별 학습 경쟁이 더욱 치열해지고 있습니다.<br>
+     👉 이번 주 주인공은 누군지, 지금 확인해보세요!</p>
+  <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" 
+     class="btn" target="_blank">🦙Fast Learner 명단 확인</a>
+</div>
+
   <!-- 러크TV -->
   <div class="card">
     <h3>📺 러크TV | LG전자 임직원들이 만드는 "우리 모두의 경험과 노하우"</h3>
