--- a/20250910/index.html
+++ b/20250910/index.html
@@ -155,7 +155,7 @@
     <section class="card">
       <h3>📚 쏘칼 Pick! SW 개발자 필수 자료</h3>
       <ol class="list-tight">
-        <p>항상 바쁜 SW 개발자를 위해 <strong>AISE</strong>가 개발 산출물 생성과 개발자 액션을 웹에서 자동화합니다.</p>
+        <p>SW 개발자를 위한 최적의 도구, <strong>AISE</strong>! 반복적인 산출물 생성을 웹에서 자동화🤖하고, 개발 효율을 극대화하세요.</p>
         <li>AI로 시작하는 SRS / Test Case 생성</li>
         <li>정적 분석 결함 수정 <em>Change</em>를 즉시 조회</li>
         <li>프로젝트 SW 아키텍처 빠른 분석</li>
@@ -163,7 +163,7 @@
         <li>Code 품질, Code X-ray로 빠른 피드백</li>
         <li>복잡한 오픈소스 라이선스 — 분석 결과 기반 해석까지!</li>
       </ol>
-      <a href="https://aise.lge.com" class="btn" target="_blank" rel="noopener noreferrer">AISE 바로가기</a>
+      <a href="https://aise.lge.com" class="btn" target="_blank" rel="noopener noreferrer">AISE 바로가</a>
     </section>
 
     <!-- PMC -->
