--- a/20250910/index.html
+++ b/20250910/index.html
@@ -163,7 +163,7 @@
         <li>Code 품질, Code X-ray로 빠른 피드백</li>
         <li>복잡한 오픈소스 라이선스 — 분석 결과 기반 해석까지!</li>
       </ol>
-      <a href="https://aise.lge.com" class="btn" target="_blank" rel="noopener noreferrer">AISE 바로가</a>
+      <a href="https://aise.lge.com" class="btn" target="_blank" rel="noopener noreferrer">AISE 바로가기</a>
     </section>
 
     <!-- PMC -->
