--- a/20250910/index.html
+++ b/20250910/index.html
@@ -121,7 +121,7 @@
     <!-- 러크TV -->
     <section class="card">
       <h3>📺 러크TV 신규 콘텐츠 | 모두의 경험과 노하우</h3>
-      <p>국내 1호 프롬프트 엔지니어 <strong>강수진 박사</strong>의 GPT-5 리뷰 정리와, <strong>Vibe Coding</strong> 꿀팁 4가지를 소개합니다.<br> CSO 정의석의 큐레이션, 놓치면 아쉽습니다.</p>
+      <p>국내 1호 프롬프트 엔지니어 <strong>강수진 박사</strong>의 GPT-5 리뷰 정리와, <strong>Vibe Coding</strong> 꿀팁 4가지를 소개합니다.<br> CSO 정의석의 콘텐츠, 놓치면 아니되옵니다.</p>
       <ul class="list-tight" style="font-size:13px;">
         <li><a href="http://collab.lge.com/main/x/zPYxx" target="_blank" rel="noopener noreferrer">(25.09.05) 강수진 박사 – GPT-5 리뷰 한눈에 보기</a></li>
         <li><a href="http://collab.lge.com/main/x/Kuphx" target="_blank" rel="noopener noreferrer">Vibe Code Tools – arxiv-paper-saver</a></li>
