--- a/20250910/index.html
+++ b/20250910/index.html
@@ -147,7 +147,7 @@
     <!-- Fast Learner -->
     <section class="card">
       <h3>🏃 3분기 Fast Learner</h3>
-      <p>이번 주 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3291779820" target="_blank" rel="noopener noreferrer">쏘칼 학습 인증 이벤트🍁</a>에서는 ‘피곤함·드라마·이슈’ 등 각자의 학습 데몬 고백이 이어졌습니다. 드라마, 업무 이슈를 넘어 러닝 루틴을 지켜낸 모든 분을 응원합니다. 이번 주 학습 1위는 <strong>HS 정상훈 선임</strong>! Top10이 궁금하다면 지금 확인하세요.</p>
+      <p>이번 주 <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=3291779820" target="_blank" rel="noopener noreferrer">쏘칼 학습 인증 이벤트🍁</a>에서는 ‘피곤함·드라마·이슈’ 등 각자의 학습 데몬 고백이 이어졌습니다. 드라마, 업무 이슈를 넘어 러닝 루틴을 지켜낸 모든 분을 응원합니다. <br> 이번 주 학습 1위는 <strong>HS 정상훈 선임</strong>! Top10이 궁금하다면 지금 확인하세요.</p>
       <a href="http://collab.lge.com/main/pages/viewpage.action?pageId=2966064616" class="btn" target="_blank" rel="noopener noreferrer">🏅 Fast Learner Ranking Board</a>
     </section>
 
