--- a/pmc/index.html
+++ b/pmc/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <main>
-  <h1>SG SW PM Competiton 2025</h1>
+  <h1>LG SW PM Competiton 2025</h1>
   <p>원하는 메뉴를 선택하세요.</p>
   <div class="menu">
     <a class="btn" href="pmc_item_cards.html">아이템 카드 소개</a>
