--- a/pmc/pmc_item_cards.html
+++ b/pmc/pmc_item_cards.html
@@ -34,7 +34,8 @@
 
   <main>
     <section class="intent">
-      <p><strong>기획 의도</strong> — 참가 팀이 <strong>시간·집중·협업</strong>의 세 축을 전략적으로 관리하도록 돕습니다. 본 아이템을 통해 <strong>① 집중 향상 ② 공정성과 긴장감 유지 ③ 체력·사기 보강 ④ 시간 운영 효율</strong>을 균형 있게 달성하기를 바랍니다.</p>
+      <p><strong>본선에 오른 여러분, 진심으로 축하합니다! <br>
+이번 아이템은 <strong></strong>시간·집중·협업의 균형</strong>을 잡기 위해 고안되었습니다. 동료들과 재미있고 끈끈하게—<strong></strong>함께 PMC를 즐겨주세요!</strong></p>
     </section>
 
     <section>
@@ -142,3 +143,4 @@
   </main>
 </body>
 </html>
+
