--- a/pmc/pmc_item_cards.html
+++ b/pmc/pmc_item_cards.html
@@ -35,7 +35,7 @@
   <main>
     <section class="intent">
       <p><strong>본선에 오른 여러분, 진심으로 축하합니다! <br>
-이번 아이템은 <strong></strong>시간·집중·협업의 균형</strong>을 잡기 위해 고안되었습니다. 동료들과 재미있고 끈끈하게—<strong></strong>함께 PMC를 즐겨주세요!</strong></p>
+이번 아이템은 <strong></strong>시간·집중·협업의 균형</strong>을 잡기 위해 고안되었습니다. <strong>동료들과 재미있고 끈끈하게~함께 PMC를 즐겨주세요!</strong></p>
     </section>
 
     <section>
@@ -143,4 +143,5 @@
   </main>
 </body>
 </html>
+
 
