--- a/pmc/pmc_item_cards.html
+++ b/pmc/pmc_item_cards.html
@@ -108,7 +108,7 @@
           <img src="assets/item-switch.png" alt="전환의 부적"/>
           <figcaption>
             <div class="name">전환의 부적</div>
-            <div class="desc">14:00 돌발 데몬 공개 시, 다른 데몬으로 1회 교체</div>
+            <div class="desc">데몬 1회 교체</div>
           </figcaption>
         </figure>
 
@@ -143,6 +143,7 @@
   </main>
 </body>
 </html>
+
 
 
 
