--- a/pmc/pmc_item_cards.html
+++ b/pmc/pmc_item_cards.html
@@ -81,7 +81,7 @@
           <img src="assets/item-choco.png" alt="헌터스 초코파워"/>
           <figcaption>
             <div class="name">헌터스 초코파워</div>
-            <div class="desc">초콜릿 1개 팀</div>
+            <div class="desc">당충전 초코렛 제공</div>
           </figcaption>
         </figure>
 
@@ -143,6 +143,7 @@
   </main>
 </body>
 </html>
+
 
 
 
