--- a/pmc/pmc_item_cards.html
+++ b/pmc/pmc_item_cards.html
@@ -90,7 +90,7 @@
           <img src="assets/item-teatime.png" alt="헌터스 티타임 사용권"/>
           <figcaption>
             <div class="name">헌터스 티타임 사용권</div>
-            <div class="desc">티타임 15,000원(3인 / ~10월)</div>
+            <div class="desc">티타임 15,000원(~10월)</div>
           </figcaption>
         </figure>
 
@@ -99,7 +99,7 @@
           <img src="assets/item-hoodie.png" alt="헌터스 기념 의복+1"/>
           <figcaption>
             <div class="name">헌터스 기념 의복+1</div>
-            <div class="desc">팀 굿즈(후디) 1개</div>
+            <div class="desc">팀 굿즈(후디) +1</div>
           </figcaption>
         </figure>
 
@@ -117,7 +117,7 @@
           <img src="assets/item-chaos.png" alt="혼돈의 수정구"/>
           <figcaption>
             <div class="name">혼돈의 수정구</div>
-            <div class="desc">다른 팀과 자리 교환</div>
+            <div class="desc">다른 팀과 자리 교환 가능</div>
           </figcaption>
         </figure>
 
@@ -126,7 +126,7 @@
           <img src="assets/item-ramen.png" alt="헌터스 전투 식량 신라면"/>
           <figcaption>
             <div class="name">헌터스 전투 식량 신라면</div>
-            <div class="desc">즉석 취식 보급 — 3팀</div>
+            <div class="desc">즉석 취식 보급</div>
           </figcaption>
         </figure>
 
@@ -143,6 +143,7 @@
   </main>
 </body>
 </html>
+
 
 
 
