--- a/pmc/index.html
+++ b/pmc/index.html
@@ -21,6 +21,7 @@
     <a class="btn" href="pmc_item_cards.html">아이템 카드 소개</a>
     <a class="btn" href="pmc_morning_draw.html">오전: 아이템+발표 순서 뽑기</a>
     <a class="btn" href="pmc_afternoon_draw.html">오후: 아이템 뽑기</a>
+    <a class="btn" href="ladder.html">오후: 사다리 게임</a>
   </div>
 </main>
 </body>
